# DruidicGroveAI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  badges.csv  justfile  pyproject.toml  user_information.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/workflows/: pull_request_workflow.yml
configuration/: settings.toml  stackoverflow_settings.toml
configuration/stackoverflow/: eda.toml  raw_data_layer.toml
data/test/: sentences.txt  test_download_raw_data.csv
data/test/data_preparation/: test_download_raw_data_query.sql
docs/: index.html  style.css  use_cases.html
docs/stackoverflow_answer_score_classification/: data_sources.html  development_v.1.0.x.html  exploratory_data_analysis.html  general.html  input_data_sources.html
notebooks/debug/: stackoverflow_debug.ipynb
notebooks/stackoverflow/eda/: stackoverflow_eda.ipynb
queries/stackoverflow/data_preparation/: post_answers.sql  raw_dataset.sql  top_100_rarest_badges.sql  top_10_rarest_badges.sql  top_rarest_badges.sql  users_information.sql
queries/stackoverflow/data_preparation/raw_data_layer/: badges.sql  badges_relevant_users.sql  post_answers.sql  posts_answers.sql  top_rarest_badges.sql  user_information.sql  users.sql  users_information.sql
queries/stackoverflow/eda/: users.sql
queries/stackoverflow/eda/badges/: badges_relevant_users.sql  number_badges_relevant_users.sql
queries/stackoverflow/eda/posts_answers/: post_answers_relevant_users.sql
queries/stackoverflow/eda/users/: relevant_users.sql
queries/stackoverflow/eda/views/: relevant_users_view.sql
queries/test_queries/: test_access_bigquery_query.sql  test_create_table.sql
queries/test_queries/bigquery_connector/: test_create_table_query.sql  test_read_query.sql
queries/test_queries/stackoverflow_data_preparation/: test_input_table_1.sql  test_post_answers.sql  test_raw_dataset.sql  test_top_rarest_badges.sql  test_users_information.sql
scripts/: pylint_lint.sh  ruff_lint.sh  sqlfluff_fix_and_lint.sh
src/: custom_types.py  types.py
src/bigquery_connector/: bigquery_connector.py  bigquery_types.py  types.py
src/data_preparation/: data_preparation.py  data_preparation_types.py  data_preparation_utils.py
src/general_utils/: general_utils.py
src/logging_module/: log_configuration.yaml  logging_module.py
src/postgresql_connector/: postgresql_connector.py  postgresql_types.py
src/stackoverflow/data_preparation/: data_preparation.py
src/stackoverflow/pipelines/data/: answer_score_raw_data_flow.py  answer_score_raw_data_script.py
tests/: conftest.py  test_bigquery_connector.py  test_custom_types.py  test_data_preparation.py  test_general_utils.py  test_logging_module.py  test_types.py
tests/bigquery_connector/: test_bigquery_connector.py
tests/data_preparation/: test_data_preparation.py  test_stackoverflow_data_preparation.py
tests/fixtures/: bigquery_fixtures.py  data_preparation_fixtures.py  data_preparation_utils_fixtures.py  postgresql_fixtures.py
tests/postgresql_connector/: test_postgresql_connector.py
tests/utils/: test_custom_types.py  test_general_utils.py  test_logging_module.py
